# jni-excercise

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/nl/sense_os/jniexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: secret-wrapper.cpp  secret.cpp
app/src/main/cpp/include/: secret.h
app/src/main/java/nl/sense_os/jniexample/: MainActivity.java  SecretLib.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/nl/sense_os/jniexample/: ExampleUnitTest.java
